[package]
name = "rconpro"
version = "0.1.0"
authors = ["jsimonrichard <jsimonrichard@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rconpro"
path = "src/lib.rs"

[[bin]]
name = "rconpro-test"
path = "src/bin.rs"

[dependencies]
byteorder = "1.4.3"
ctrlc = "3.1.9"
derive_more = "0.99.16"
encoding = "0.2.33"
rand = "0.8.4"
